# RawInputMultiModeCpp

./: .gitignore  CMakeLists.txt  README.md  RawInputPlugin.cpp  RawInputPlugin.h  RawInputStateTracker.cpp  RawInputUnityForwarder.h
OldWithMouseUp/: RawInputStateTracker.cpp  RawInputStateTracker.h  RawInputUnityForwarder.cpp  RawInputWindow.cpp  RawInputWindow.h
